...
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/button_profile_add_tag"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/icon_add"
                android:backgroundTint="@color/greyish_brown"
                app:layout_constraintBottom_toBottomOf="@id/profile_title_tag"
...
